--- a/client/src/app/auth/pages/register/register.component.html
+++ b/client/src/app/auth/pages/register/register.component.html
@@ -1,1 +1,69 @@
-<p>register works!</p>
+<div class="p-4">
+  <form [formGroup]="registerForm" class="flex flex-col items-center justify-center gap-4 p-8" (submit)="onSubmit()">
+    <img src="/assets/images/yuhat.png" alt="Yuhat logo" class="max-w-32">
+
+    <h1 class="text-3xl font-semibold">Welcome back✌️</h1>
+    <h6>Login to continue your chats and connect with everyone</h6>
+
+    <mat-form-field appearance="outline" class="w-full">
+      <mat-label>Username</mat-label>
+      <input matInput formControlName="username" placeholder="Your username">
+      <mat-error *ngFor="let error of getObjectKeys(registerForm.get('username')?.errors)">
+        {{ usernameValidationMsg[error] }}
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="w-full">
+      <mat-label>Email</mat-label>
+      <input matInput formControlName="email" placeholder="Your email">
+      <mat-error *ngFor="let error of getObjectKeys(registerForm.get('email')?.errors)">
+        {{ usernameValidationMsg[error] }}
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="w-full">
+      <mat-label>Password</mat-label>
+      <input matInput formControlName="password" placeholder="Enter your password" [type]="hidePassword ? 'password' : 'text'">
+      <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword" type="button">
+        <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+      </button>
+      <mat-error *ngFor="let error of getObjectKeys(registerForm.get('password')?.errors)">
+        {{ passwordValidationMsg[error] }}
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="w-full">
+      <mat-label>Password Confirmation</mat-label>
+      <input matInput formControlName="passwordConfirmation" placeholder="Confirm your password" [type]="hidePasswordConfirmation ? 'password' : 'text'">
+      <button mat-icon-button matSuffix (click)="hidePasswordConfirmation = !hidePasswordConfirmation" [attr.aria-label]="'Hide password Confirmation'" [attr.aria-pressed]="hidePasswordConfirmation" type="button">
+        <mat-icon>{{hidePasswordConfirmation ? 'visibility_off' : 'visibility'}}</mat-icon>
+      </button>
+      <mat-error *ngFor="let error of getObjectKeys(registerForm.get('passwordConfirmation')?.errors)">
+        {{ passwordValidationMsg[error] }}
+      </mat-error>
+    </mat-form-field>
+
+    <p class="text-red-600" *ngIf="formError">{{ formError }}</p>
+
+    <button type="submit" class="text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 w-full">Register</button>
+
+    <div class="grid items-center w-full grid-cols-3 mt-4 text-gray-500">
+      <hr class="border-gray-500" />
+      <p class="text-sm text-center">OR</p>
+      <hr class="border-gray-500" />
+    </div>
+
+    <div class="flex gap-6">
+      <button type="button" class="hover:scale-125 duration-300" (click)="navigateToAuthPage('google')"><img src="/assets/images/google.svg" alt="" class="max-w-8"></button>
+      <button type="button" class="hover:scale-125 duration-300" (click)="navigateToAuthPage('github')"><img src="/assets/images/github.svg" alt="" class="max-w-8"></button>
+      <a routerLink=""><img src="/assets/images/slack.svg" alt="" class="max-w-8"></a>
+      <a routerLink=""><img src="/assets/images/telegram.svg" alt="" class="max-w-8"></a>
+    </div>
+
+    <a routerLink="/auth/login">Go to login page</a>
+  </form>
+</div>
+
+
+{{ registerForm.valid }}
+{{ registerForm.errors | json }}
