feat(backend): serve static resources

--- a/client/src/app/layout/components/header/header.component.html
+++ b/client/src/app/layout/components/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<div class="shadow-md">
+  Header
+
+  <button class="hover:bg-slate-100 px-4 py-2 bg-gray-200" (click)="logout()">Logout</button>
+</div>
