--- a/client/src/app/profile/pages/edit-profile/edit-profile.component.html
+++ b/client/src/app/profile/pages/edit-profile/edit-profile.component.html
@@ -1,2 +1,40 @@
-<p>edit-profile works!</p>
-{{ someMessage | async | json }}
+<form [formGroup]="editProfileForm" class="p-4">
+  <mat-form-field appearance="outline" class="w-full">
+    <mat-label>Fullname</mat-label>
+    <input matInput formControlName="fullname" placeholder="Your fullname">
+    <!-- <mat-error *ngFor="let error of getObjectKeys(loginForm.get('username')?.errors)">
+      {{ usernameValidationMsg[error] }}
+    </mat-error> -->
+  </mat-form-field>
+
+  <mat-form-field appearance="outline" class="w-full">
+    <mat-label>Age</mat-label>
+    <input matInput formControlName="age" placeholder="Your age" type="number" max="100" min="10">
+    <!-- <mat-error *ngFor="let error of getObjectKeys(loginForm.get('username')?.errors)">
+      {{ usernameValidationMsg[error] }}
+    </mat-error> -->
+  </mat-form-field>
+
+  <mat-form-field appearance="outline" class="w-full">
+    <mat-label>Bio</mat-label>
+    <textarea matInput formControlName="bio" placeholder="Your bio"></textarea>
+    <!-- <mat-error *ngFor="let error of getObjectKeys(loginForm.get('username')?.errors)">
+      {{ usernameValidationMsg[error] }}
+    </mat-error> -->
+  </mat-form-field>
+
+
+  <mat-form-field appearance="outline" class="example-full-width">
+    <mat-label>Date of birth</mat-label>
+    <input matInput [matDatepicker]="picker">
+    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker touchUi #picker></mat-datepicker>
+  </mat-form-field>
+
+  <img src="" alt="">
+  <div>
+    <label for="avatar">Avatar</label>
+    <input type="file" formControlName="avatar">
+  </div>
+
+</form>
