--- a/client/src/app/layout/auth-layout/auth-layout.component.html
+++ b/client/src/app/layout/auth-layout/auth-layout.component.html
@@ -1,36 +1,21 @@
-<div class="grid min-h-screen grid-cols-3">
-  <div>
+<div class="lg:grid-cols-3 md:grid-cols-2 grid min-h-screen">
+  <div class="p-4">
     <router-outlet></router-outlet>
-
-<!-- <form class="max-w-sm mx-auto">
-  <div class="mb-5">
-    <label for="email" class="dark:text-white block mb-2 text-sm font-medium text-gray-900">Your email</label>
-    <input type="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@flowbite.com" required />
-  </div>
-  <div class="mb-5">
-    <label for="password" class="dark:text-white block mb-2 text-sm font-medium text-gray-900">Your password</label>
-    <input type="password" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required />
-  </div>
-  <div class="flex items-start mb-5">
-    <div class="flex items-center h-5">
-      <input id="remember" type="checkbox" value="" class="bg-gray-50 focus:ring-3 focus:ring-blue-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 w-4 h-4 border border-gray-300 rounded" required />
-    </div>
-    <label for="remember" class="ms-2 dark:text-gray-300 text-sm font-medium text-gray-900">Remember me</label>
-  </div>
-  <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-    Submit</button>
-  </form> -->
-
   </div>
 
-  <div class=" relative col-span-2 text-center text-white">
+  <div class="banner-section md:block lg:col-span-2 relative hidden text-center text-white">
     <div class="banner brightness-75 w-full h-full bg-center bg-no-repeat bg-cover"></div>
-    <div class="brightness-100 bottom-10 absolute left-0 right-0 space-y-2">
-      <h4 class="flex items-center justify-center gap-3 text-3xl font-semibold">
-        <img src="/assets/images/yuhat.svg" class="max-w-14 inline-block" alt="">
-        <span class="text-sky-400">Yuhat ChatApp</span>
+    <div class="brightness-100 bottom-20 absolute left-0 right-0 space-y-2">
+      <h4 class="flex items-center justify-center gap-3 text-5xl font-semibold">
+        <img
+          src="/assets/images/yuhat.svg"
+          class="max-w-14 inline-block"
+          loading="eager"
+          draggable="false"
+          alt="Yuhat logo">
+        <span class="text-sky-400"><span class="text-blue-900">Yu</span>hat</span>
       </h4>
-      <p class="text-xl">Keep your communication with everyone!</p>
+      <p class="text-xl italic">Keep your communication with everyone!</p>
     </div>
   </div>
 </div>
