--- a/client/src/app/layout/auth-layout/auth-layout.component.scss
+++ b/client/src/app/layout/auth-layout/auth-layout.component.scss
@@ -1,3 +1,9 @@
 .banner {
   background-image: url("/assets/images/auth-banner.jpg");
 }
+
+.banner-section {
+  span {
+    font-family: "Lobster", sans-serif;
+  }
+}
