--- a/client/src/app/auth/pages/login/login.component.html
+++ b/client/src/app/auth/pages/login/login.component.html
@@ -40,7 +40,7 @@
     Login
   </button>
 
-  <a class="text-end hover:text-gray-800 hover:underline block w-full text-gray-500" routerLink="">Forget your password?</a>
+  <a class="text-end hover:text-gray-800 hover:underline block w-full text-gray-500" routerLink="/auth/forget-password">Forget your password?</a>
 
   <div class="grid items-center w-full grid-cols-3 mt-4 text-gray-500">
     <hr class="border-gray-500" />
