--- a/client/src/app/layout/components/footer/footer.component.html
+++ b/client/src/app/layout/components/footer/footer.component.html
@@ -1,1 +1,3 @@
-<p>footer works!</p>
+<div class="bg-sky-600 px-4 py-2 text-center text-white">
+  <p class="text-unica-one font-semibold">© 2024 YUHAT | All Right Reserved</p>
+</div>
