--- a/client/src/app/layout/full-layout/full-layout.component.html
+++ b/client/src/app/layout/full-layout/full-layout.component.html
@@ -1,5 +1,10 @@
 <app-header></app-header>
 
-<router-outlet></router-outlet>
+<main class="bg-gray-50 p-2 mt-1">
+  <div class="container mx-auto">
+    <router-outlet></router-outlet>
+
+  </div>
+</main>
 
 <app-footer></app-footer>
