enhance(frontend): edit profile

--- a/client/src/app/layout/components/header/header.component.html
+++ b/client/src/app/layout/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-white border-gray-200 shadow-md">
+<nav class="fixed top-0 left-0 right-0 z-10 bg-white border-gray-200 shadow-md">
   <div class="container flex flex-wrap items-center justify-between p-4 mx-auto">
     <a routerLink="/" class="flex items-center space-x-3">
       <img src="/assets/images/yuhat-horizontal.png" class="h-12" alt="Yuhat Logo"/>
