feat(frontend): change password ui

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -21,6 +21,6 @@
   border-right-style: hidden;
 }
 
-textarea:focus {
-  --tw-ring-shadow: none;
+textarea:focus, input:focus {
+  --tw-ring-shadow: none !important;
 }
