--- a/client/src/app/profile/pages/change-password/change-password.component.html
+++ b/client/src/app/profile/pages/change-password/change-password.component.html
@@ -1,5 +1,5 @@
-<form [formGroup]="changePasswordForm" class="p-4" (submit)="onSubmit()">
-
+<form [formGroup]="changePasswordForm" class="max-w-screen-md p-4 mx-auto my-4 space-y-2" (submit)="onSubmit()">
+  <h4 class="text-unica-one my-3 text-3xl font-semibold text-center">Change Password</h4>
   <mat-form-field appearance="outline" class="w-full">
     <mat-label>Password</mat-label>
     <input matInput formControlName="password" placeholder="Your current password" [type]="hidePassword ? 'password' : 'text'">
@@ -30,6 +30,8 @@
     </button>
   </mat-form-field>
 
-  <button type="submit" class="hover:bg-sky-300 bg-sky-400 px-4 py-2 my-2">Change my password</button>
+  <div class="text-end">
+    <button type="submit" class="hover:bg-sky-300 bg-sky-400 px-5 py-2.5 my-2 rounded-full">Change my password</button>
+  </div>
 </form>
 
