--- a/client/src/app/dashboard/pages/chat/chat.component.html
+++ b/client/src/app/dashboard/pages/chat/chat.component.html
@@ -1,3 +1,163 @@
+<div class="md:flex-row flex flex-col h-full max-h-full gap-2 pb-2">
+  <div class="md:w-1/3 lg:w-1/4 md:max-h-full md:overflow-y-auto w-full px-2 space-y-4">
+    <h4 class="mt-4 ml-4 text-xl font-semibold">Your chats</h4>
+    <div>
+      <input
+        class="w-full rounded-lg"
+        placeholder="Search chat"
+        type="text">
+    </div>
+    <div class="md:block md:py-0 flex py-2 overflow-x-auto">
+      <div class="flex items-center gap-3 px-4 bg-second/60 py-2.5 rounded-xl cursor-pointer">
+        <img
+          class="max-w-20 border-slate-700 border-2 rounded-full"
+          src="http://localhost:3000/public/default-avatar.jpg"
+          alt="User avatar">
+        <div class="md:block flex-grow hidden">
+          <h6 class="text-lg font-semibold">Thanh Hòa</h6>
+          <p>I'm coming for you · 5 mins ago</p>
+        </div>
+        <!-- <button class="hover:bg-fourth bg-third p-3 text-gray-600 rounded-full shadow-md">
+          <i class="icon-more-vert flex items-center justify-center"></i>
+        </button> -->
+      </div>
+
+      <div class="flex items-center gap-3 px-4 py-2.5 cursor-pointer rounded-xl hover:bg-gray-200">
+        <img
+          class="max-w-20 border-slate-700 border-2 rounded-full"
+          src="http://localhost:3000/public/default-avatar.jpg"
+          alt="User avatar">
+        <div class="md:block flex-grow hidden">
+          <h6 class="text-lg font-semibold">Thanh Hòa</h6>
+          <p>I'm coming for you · 5 mins ago</p>
+        </div>
+        <!-- <button class="hover:bg-fourth bg-third p-3 text-gray-600 rounded-full shadow-md">
+          <i class="icon-more-vert flex items-center justify-center"></i>
+        </button> -->
+      </div>
+
+      <div class="flex items-center gap-3 px-4 py-2.5 cursor-pointer rounded-xl hover:bg-gray-200">
+        <img
+          class="max-w-20 border-slate-700 border-2 rounded-full"
+          src="http://localhost:3000/public/default-avatar.jpg"
+          alt="User avatar">
+        <div class="md:block flex-grow hidden">
+          <h6 class="text-lg font-semibold">Thanh Hòa</h6>
+          <p>I'm coming for you · 5 mins ago</p>
+        </div>
+        <!-- <button class="hover:bg-fourth bg-third p-3 text-gray-600 rounded-full shadow-md">
+          <i class="icon-more-vert flex items-center justify-center"></i>
+        </button> -->
+      </div>
+
+      <div class="flex items-center gap-3 px-4 py-2.5 cursor-pointer rounded-xl hover:bg-gray-200">
+        <img
+          class="max-w-20 border-slate-700 border-2 rounded-full"
+          src="http://localhost:3000/public/default-avatar.jpg"
+          alt="User avatar">
+        <div class="md:block flex-grow hidden">
+          <h6 class="text-lg font-semibold">Thanh Hòa</h6>
+          <p>I'm coming for you · 5 mins ago</p>
+        </div>
+        <!-- <button class="hover:bg-fourth bg-third p-3 text-gray-600 rounded-full shadow-md">
+          <i class="icon-more-vert flex items-center justify-center"></i>
+        </button> -->
+      </div>
+
+      <div class="flex items-center gap-3 px-4 py-2.5 cursor-pointer rounded-xl hover:bg-gray-200">
+        <img
+          class="max-w-20 border-slate-700 border-2 rounded-full"
+          src="http://localhost:3000/public/default-avatar.jpg"
+          alt="User avatar">
+        <div class="md:block flex-grow hidden">
+          <h6 class="text-lg font-semibold">Thanh Hòa</h6>
+          <p>I'm coming for you · 5 mins ago</p>
+        </div>
+        <!-- <button class="hover:bg-fourth bg-third p-3 text-gray-600 rounded-full shadow-md">
+          <i class="icon-more-vert flex items-center justify-center"></i>
+        </button> -->
+      </div>
+
+      <div class="flex items-center gap-3 px-4 py-2.5 cursor-pointer rounded-xl hover:bg-gray-200">
+        <img
+          class="max-w-20 border-slate-700 border-2 rounded-full"
+          src="http://localhost:3000/public/default-avatar.jpg"
+          alt="User avatar">
+        <div class="md:block flex-grow hidden">
+          <h6 class="text-lg font-semibold">Thanh Hòa</h6>
+          <p>I'm coming for you · 5 mins ago</p>
+        </div>
+        <!-- <button class="hover:bg-fourth bg-third p-3 text-gray-600 rounded-full shadow-md">
+          <i class="icon-more-vert flex items-center justify-center"></i>
+        </button> -->
+      </div>
+    </div>
+  </div>
+
+  <div class="md:w-2/3 lg:w-3/4 flex flex-col flex-grow w-full pb-2 border-l-2 border-gray-300">
+    <div class="bg-first text-white px-4 py-2.5 flex justify-between items-center shadow-lg">
+      <div class="flex items-center justify-center gap-2">
+        <img
+        class="max-w-16 border-slate-700 border-2 rounded-full"
+        src="http://localhost:3000/public/default-avatar.jpg"
+        alt="User avatar">
+        <div>
+          <h6 class="text-lg font-semibold">Thanh Hòa</h6>
+          <p>Online</p>
+        </div>
+      </div>
+
+      <div>
+        <button>
+          <i class="icon-info hover:text-fourth text-third text-2xl"></i>
+        </button>
+      </div>
+    </div>
+
+    <div class="flex-grow p-2 mt-1 space-y-2 overflow-y-auto bg-gray-200">
+      <div class="flex items-start gap-2">
+        <img class="max-w-8 border-2 border-black rounded-full" src="http://localhost:3000/public/105a3104c7d7ba48410102f3b410d428e9bd5.jpg">
+        <div style="max-width: 60%;">
+          <p class="bg-second p-2 rounded-lg rounded-tl-none">
+            Mollit non mollit reprehenderit culpa consectetur ipsum sint cillum esse est. Adipisicing ad magna ex id non sit nulla consectetur esse. Anim nostrud adipisicing eu sit fugiat enim quis irure adipisicing. Anim sint ad nisi reprehenderit eu excepteur fugiat ea voluptate qui ex.
+          </p>
+          <small>17:50 Saturday</small>
+        </div>
+      </div>
+
+      <div class="flex items-start justify-end gap-2">
+        <div style="max-width: 60%;">
+          <p class="bg-fourth p-2 rounded-lg rounded-tr-none">
+            Ullamco exercitation occaecat nisi consequat Lorem excepteur est deserunt cupidatat pariatur. Sint id duis dolor nulla esse enim dolor ea. Aute consequat deserunt consectetur eiusmod in. In aliqua qui laboris aute tempor deserunt cupidatat nulla excepteur.
+          </p>
+          <small>17:52 Saturday</small>
+        </div>
+      </div>
+    </div>
+
+    <div class="flex items-end gap-2 px-2 pt-2">
+      <button>
+        <i class="icon-add-circle text-secondary hover:text-primary text-2xl"></i>
+      </button>
+      <button>
+        <i class="icon-attach-file text-secondary hover:text-primary text-2xl"></i>
+      </button>
+      <textarea
+        class="no-scrollbar flex-grow rounded-lg"
+        (input)="autoGrowInput($event.target)"
+        cols="30"
+        rows="1"
+        placeholder="Aa"></textarea>
+      <button>
+        <i class="icon-send text-first hover:text-primary text-2xl"></i>
+      </button>
+    </div>
+  </div>
+</div>
+
+<!--
+<div class="min-h-96"></div>
+
 <div class="space-y-4">
   <p class="text-sky-500 font-semibold">Create new room chat</p>
 
@@ -44,10 +204,5 @@
       </button>
     </div>
   </div>
-</div>
+</div> -->
 
-{{ messageForSending.value }}
-
-
-<br><hr>
-{{ testMessages | json }}
