--- a/client/src/libs/icomoon/style.css
+++ b/client/src/libs/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?p57yi4');
-  src:  url('fonts/icomoon.eot?p57yi4#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?p57yi4') format('truetype'),
-    url('fonts/icomoon.woff?p57yi4') format('woff'),
-    url('fonts/icomoon.svg?p57yi4#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?z8jbzw');
+  src:  url('fonts/icomoon.eot?z8jbzw#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?z8jbzw') format('truetype'),
+    url('fonts/icomoon.woff?z8jbzw') format('woff'),
+    url('fonts/icomoon.svg?z8jbzw#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,25 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-send:before {
+  content: "\e907";
+}
+.icon-add-circle:before {
+  content: "\e905";
+}
+.icon-attach-file:before {
+  content: "\e906";
+}
+.icon-info:before {
+  content: "\e904";
+}
+.icon-more-vert:before {
+  content: "\e902";
+}
+.icon-discord1:before {
+  content: "\e901";
+  color: #7289da;
+}
 .icon-discord:before {
   content: "\e900";
   color: #5865f2;
