--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -17,6 +17,10 @@
   font-family: "Poppins", sans-serif;
 }
 
+.text-lobster {
+  font-family: "Lobster", sans-serif;
+}
+
 .mat-mdc-form-field.mat-mdc-form-field.mat-mdc-form-field.mat-mdc-form-field.mat-mdc-form-field
   .mdc-notched-outline__notch {
   border-right-style: hidden;
