--- a/client/src/app/chat/components/room-chat-selector/room-chat-selector.component.html
+++ b/client/src/app/chat/components/room-chat-selector/room-chat-selector.component.html
@@ -1,8 +1,8 @@
 <ng-container *ngIf="roomChats">
   <div *ngFor="let roomChat of roomChats"
-    [class]="{ 'bg-second/60': false }"
+    [class]="roomChat === selectedRoomChat ? 'bg-second/60' : 'hover:bg-gray-200'"
     (click)="selectChat(roomChat)"
-    class="flex items-center gap-3 px-4 py-2.5 cursor-pointer rounded-xl hover:bg-gray-200">
+    class="flex items-center gap-3 px-4 py-2.5 cursor-pointer rounded-xl">
 
     <img class="max-w-20 border-slate-700 border-2 rounded-full" [src]="roomChat.participantAvatar"
       [alt]="'Avatar of room chat' + roomChat.id">
