--- a/client/src/app/chat/pages/dashboard/dashboard.component.html
+++ b/client/src/app/chat/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="md:flex-row flex flex-col h-full max-h-full gap-2 pb-2">
+<div class="md:flex-row relative flex flex-col h-full max-h-full gap-2 pb-2">
   <div class="md:w-1/3 lg:w-1/4 md:max-h-full md:overflow-y-auto w-full px-2 space-y-4">
     <h4 class="mt-4 ml-4 text-xl font-semibold">Your chats</h4>
     <div>
@@ -15,31 +15,29 @@
       </app-room-chat-selector>
     </div>
 
-    "{{ messageInput.value }}"
-    <br>
-    is valid: {{ messageInput.valid }}
+  </div>
+
+  <div #roomChatInfoSidebar class="left-sidebar hide absolute z-10 w-full h-full overflow-hidden transition-all duration-700">
+    <div (click)="onViewRoomChatInfo()" class="bg-slate-600 opacity-80 background w-full h-full"></div>
+    <div class="info-sidebar bg-second/80 absolute top-0 right-0 z-10 flex flex-col items-center w-1/4 h-full gap-2 pt-8 transition-all duration-700 border-l-2 border-gray-600 shadow-lg opacity-0">
+      <img [src]="selectedRoomChat?.participantAvatar"
+        [alt]="'Avatar of room chat' + selectedRoomChat?.id"
+        class="max-w-52 border-2 border-gray-500 rounded-full">
+      <h6 class="text-xl font-semibold">{{ selectedRoomChat?.participantName }}</h6>
+      <a
+        class="px-4 py-2.5 bg-third hover:bg-fourth rounded-full"
+        [routerLink]="'/profile/' + selectedRoomChat?.participantId">
+        View profile
+      </a>
+    </div>
   </div>
 
   <ng-container *ngIf="selectedRoomChat; else noSelectedRoomChat">
     <div class="md:w-2/3 lg:w-3/4 flex flex-col flex-grow w-full pb-2 border-l-2 border-gray-300">
-      <div class="bg-first text-white px-4 py-2.5 flex justify-between items-center shadow-lg">
-        <div class="flex items-center justify-center gap-2">
-          <img
-          class="max-w-16 border-slate-700 border-2 rounded-full"
-          [src]="selectedRoomChat.participantAvatar"
-          [alt]="'Avatar of room chat ' + selectedRoomChat.id">
-          <div>
-            <h6 class="text-lg font-semibold">{{ selectedRoomChat.participantName }}</h6>
-            <p>Online</p>
-          </div>
-        </div>
-
-        <div>
-          <button>
-            <i class="icon-info hover:text-fourth text-third text-2xl"></i>
-          </button>
-        </div>
-      </div>
+      <app-room-chat-info
+        [selectedRoomChat]="selectedRoomChat"
+        [roomChatInfoSidebarRef]="roomChatInfoSidebarRef">
+      </app-room-chat-info>
 
       <div #chatView class="flex-grow p-2 mt-1 space-y-2 overflow-y-auto bg-gray-200">
         <ng-container *ngFor="let message of messages$ | async">
@@ -47,30 +45,8 @@
         </ng-container>
       </div>
 
-      <div class="flex items-end gap-2 px-2 pt-2">
-        <button>
-          <i class="icon-add-circle text-secondary hover:text-primary text-2xl"></i>
-        </button>
-        <button>
-          <i class="icon-attach-file text-secondary hover:text-primary text-2xl"></i>
-        </button>
-        <textarea
-          class="no-scrollbar flex-grow rounded-lg"
-          [formControl]="messageInput"
-          (input)="autoGrowInput($event.target)"
-          (keydown.enter)="onSendMessage()"
-          cols="30"
-          rows="1"
-          placeholder="Aa"></textarea>
-        <button [disabled]="!messageInput.valid" (click)="onSendMessage()">
-          <i
-            [ngClass]="messageInput.valid ? 'text-first hover:text-primary' : 'text-gray-400'"
-            class="icon-send text-2xl">
-          </i>
-        </button>
-      </div>
+      <app-input-message-box [selectedRoomChat]="selectedRoomChat"></app-input-message-box>
     </div>
-
   </ng-container>
 
   <ng-template #noSelectedRoomChat>
