--- a/client/src/app/chat/components/room-chat-selector/room-chat-selector.component.html
+++ b/client/src/app/chat/components/room-chat-selector/room-chat-selector.component.html
@@ -1,20 +1,17 @@
-<ng-container *ngIf="roomChats">
-  <div *ngFor="let roomChat of roomChats"
-    [class]="roomChat === selectedRoomChat ? 'bg-second/60' : 'hover:bg-gray-200'"
-    (click)="selectChat(roomChat)"
-    class="flex items-center gap-3 px-4 py-2.5 cursor-pointer rounded-xl">
+<a *ngFor="let roomChat of roomChats$ | async"
+  [class]="roomChat === selectedRoomChat ? 'bg-second/60' : 'hover:bg-gray-200'"
+  [routerLink]="'/chat/r/' + roomChat.id"
+  class="flex items-center gap-3 px-4 py-2.5 cursor-pointer rounded-xl">
 
-    <img class="max-w-20 border-slate-700 border-2 rounded-full" [src]="roomChat.participantAvatar"
-      [alt]="'Avatar of room chat' + roomChat.id">
+  <img class="max-w-20 border-slate-700 border-2 rounded-full" [src]="roomChat.participantAvatar"
+    [alt]="'Avatar of room chat' + roomChat.id">
 
-    <div class="md:block flex-grow hidden">
-      <h6 class="text-lg font-semibold">{{ roomChat.participantName }}</h6>
-      <p>{{ roomChat.latestMessage }} · {{ roomChat.latestMessageSentAt | timeGap }}</p>
-    </div>
-
-    <!-- <button class="hover:bg-fourth bg-third p-3 text-gray-600 rounded-full shadow-md">
-      <i class="icon-more-vert flex items-center justify-center"></i>
-    </button> -->
-
+  <div class="md:block flex-grow hidden">
+    <h6 class="text-lg font-semibold">{{ roomChat.participantName }}</h6>
+    <p>{{ roomChat.latestMessage }} · {{ roomChat.latestMessageSentAt | timeGap }}</p>
   </div>
-</ng-container>
+
+  <!-- <button class="hover:bg-fourth bg-third p-3 text-gray-600 rounded-full shadow-md">
+    <i class="icon-more-vert flex items-center justify-center"></i>
+  </button> -->
+</a>
