--- a/client/src/app/chat/pages/dashboard/dashboard.component.html
+++ b/client/src/app/chat/pages/dashboard/dashboard.component.html
@@ -26,7 +26,7 @@
     <div class="md:block md:py-0 flex py-2 overflow-x-auto">
 
       <app-room-chat-selector
-        [selectedRoomChat]="">
+        [selectedRoomChat]="currentRoomChat">
       </app-room-chat-selector>
     </div>
 
