--- a/client/src/app/chat/pages/dashboard/dashboard.component.html
+++ b/client/src/app/chat/pages/dashboard/dashboard.component.html
@@ -1,28 +1,9 @@
-<div (click)="onClick($event)" class="md:flex-row relative flex flex-col h-full max-h-full gap-2 pb-2">
+<div class="md:flex-row relative flex flex-col h-full max-h-full gap-2 pb-2">
   <div class="md:w-1/3 lg:w-1/4 md:max-h-full md:overflow-y-auto w-full px-2 space-y-4">
     <h4 class="mt-4 ml-4 text-xl font-semibold">Your chats</h4>
-    <div class="relative">
-      <input
-        [formControl]="searchControl"
-        class="live-search w-full rounded-lg"
-        placeholder="Search"
-        type="text">
-      <div #liveSearch class="bg-slate-200 absolute left-0 right-0 rounded-md">
-        <div
-          *ngFor="let user of searchInputValue$ | async; last as isLast"
-          [class]="{'border-b-slate-100': !isLast, 'border-b-2': !isLast}"
-          (click)="onCreateNewChat(user.id)"
-          class="flex gap-3 items-center p-4 py-2.5 cursor-pointer hover:bg-slate-400 rounded-md live-search">
-          <img
-            class="max-w-12 border-slate-500 border-2 rounded-full"
-            [src]="user.avatar"
-            [alt]="'Avatar of ' + user.fullname">
-          <p>{{ user.fullname }} · {{ user.username }}</p>
-        </div>
-      </div>
-    </div>
-    <div class="md:block md:py-0 flex py-2 overflow-x-auto">
+    <app-live-search class="block"></app-live-search>
 
+    <div class="md:block md:py-0 flex py-2 overflow-x-auto">
       <app-room-chat-selector
         [selectedRoomChat]="currentRoomChat">
       </app-room-chat-selector>
