--- a/client/src/app/chat/pages/dashboard/dashboard.component.html
+++ b/client/src/app/chat/pages/dashboard/dashboard.component.html
@@ -11,26 +11,10 @@
 
   </div>
 
-  <div #roomChatInfoSidebar class="left-sidebar hide absolute z-10 w-full h-full overflow-hidden transition-all duration-700">
-    <div (click)="onViewRoomChatInfo()" class="bg-slate-600 opacity-80 background w-full h-full"></div>
-    <div class="info-sidebar bg-second/80 absolute top-0 right-0 z-10 flex flex-col items-center w-1/4 h-full gap-2 pt-8 transition-all duration-700 border-l-2 border-gray-600 shadow-lg opacity-0">
-      <img [src]="currentRoomChat?.participantAvatar"
-        [alt]="'Avatar of room chat' + currentRoomChat?.id"
-        class="max-w-52 border-2 border-gray-500 rounded-full">
-      <h6 class="text-xl font-semibold">{{ currentRoomChat?.participantName }}</h6>
-      <a
-        class="px-4 py-2.5 bg-third hover:bg-fourth rounded-full"
-        [routerLink]="'/profile/' + currentRoomChat?.participantId">
-        View profile
-      </a>
-    </div>
-  </div>
-
   <ng-container *ngIf="currentRoomChat">
     <div class="md:w-2/3 lg:w-3/4 flex flex-col flex-grow w-full pb-2 border-l-2 border-gray-300">
       <app-room-chat-info
-        [selectedRoomChat]="currentRoomChat"
-        [roomChatInfoSidebarRef]="roomChatInfoSidebarRef">
+        [selectedRoomChat]="currentRoomChat">
       </app-room-chat-info>
 
       <div #chatView class="flex-grow p-2 mt-1 space-y-2 overflow-y-auto bg-gray-200">
@@ -42,5 +26,4 @@
       <app-input-message-box [selectedRoomChat]="currentRoomChat"></app-input-message-box>
     </div>
   </ng-container>
-
 </div>
