--- a/client/src/app/chat/pages/dashboard/dashboard.component.html
+++ b/client/src/app/chat/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="md:flex-row relative flex flex-col h-full max-h-full gap-2 pb-2">
+<div class="md:flex-row relative flex flex-col h-full max-h-full gap-2">
   <div class="md:w-1/3 lg:w-1/4 md:max-h-full md:overflow-y-auto w-full px-2 space-y-4">
     <h4 class="mt-4 ml-4 text-xl font-semibold">Your chats</h4>
     <app-live-search class="block"></app-live-search>
